# NanachiBot

./: CMakeLists.txt  README.md  config_sample.txt
src/: config.cpp  config.h  hash.h  main.cpp  main.h  myrandom.cpp  myrandom.h
test-build/: CMakeCache.txt  Makefile  cmake_install.cmake
test-build/asio-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test-build/asio-download/asio-download-prefix/tmp/: asio-download-gitclone.cmake  asio-download-gitupdate.cmake
test-build/cpr-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test-build/cpr-download/cpr-download-prefix/tmp/: cpr-download-gitclone.cmake  cpr-download-gitupdate.cmake
test-build/sleepy-discord/: Makefile  cmake_install.cmake
test-build/sleepy-discord/sleepy_discord/: Makefile  cmake_install.cmake
test-build/websocketpp-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
test-build/websocketpp-download/websocketpp-download-prefix/tmp/: websocketpp-download-gitclone.cmake  websocketpp-download-gitupdate.cmake
